@@ -61,13 +61,12 @@ setup(name='zope.app.publication',
                       'ZODB3',
                       'zope.authentication',
                       'zope.component',
+                      'zope.deferredimport',
                       'zope.error',
                       'zope.i18n',
-                      'zope.traversing',
-                      'zope.app.http',
                       'zope.app.applicationcontrol',
                       'zope.browser>=1.2',
-                      'zope.publisher',
+                      'zope.publisher>=3.8.0',
                       'zope.traversing>=3.7.0',
                       'zope.app.publisher',
                       'setuptools',
